Updated resume, added hardspace

--- a/projects-gd.html
+++ b/projects-gd.html
@@ -48,7 +48,7 @@
 	<div id="projects-background"></div>
 	<div id="project-cat-nav" class="container-fluid">
 		<div id="project-bar" style="font-family: FreeSansBold" class="row text-right">
-			<div id="curr-cat" class="col-xl-3 col-lg-5 col-md-9 col-sm-12 dropdown">
+			<div id="curr-cat" class="ml-auto col-xl-3 col-lg-5 col-md-9 col-sm-12 dropdown">
 				<span id="curr-project-label">GAME DEV</span>
 				<i class="fas fa-caret-down"></i>
   				<div class="dropdown-content ml-auto">
@@ -62,8 +62,90 @@
 		</div>
 	</div>
 	<div id="project-super-container" class="container-fluid">
-		<div class="row">
+		<div class="row mx-3">
 			<div id="game-dev-projects" class="col-12 container-fluid project-list">
+				<div id="project-sunseeker" class="row project-row mt-5">
+					<div class="col-md-6 col-sm-12 d-md-block d-none description-container container-fluid text-left">
+						<div class="row">
+							<div class="col-12">
+								<h1 style="font-family: 'FreeSansBoldOblique';">HARDSPACE: SHIPBREAKER</h1>
+								<h5>STATUS: EARLY ACCESS RELEASE</h5>
+								<h5>BLACKBIRD INTERACTIVE</h5>
+								<h5>FOCUS HOME INTERACTIVE</h5>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-12 project-description" >
+								<br>
+								<p>
+									Equipped with cutting-edge salvaging tech, carve & slice spaceships to recover valuable materials. Upgrade your gear to take on more lucrative contracts and pay your billion credits debt to LYNX Corp!
+								</p>
+
+								<br>
+								<h5>FEATURES</h5>
+								<ul>
+									<li>Experience daily life as a cutter, working to pay off your debt</li>
+									<li>Cut and destroy within a next generation physics simulation</li>
+									<li>Upgrade tools and unlock new perks to take on harder contracts</li>
+								</ul>
+
+								<br>
+								<p> Worked on a variety of Gameplay, UI, Localization, Online tasks. </p>
+								<br>
+								<h5>BUILT WITH: Unity, C#, MySQL</h5>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6 col-sm-12 container-fluid">
+						<div class="row text-center">
+							<div class="col-12 text-center mx-auto">
+								<iframe src="https://www.youtube.com/embed/CzYLWspXgM0?autoplay=1&mute=1&controls=0" width="100%" height="500px" frameborder="0" allowfullscreen></iframe>
+							</div>
+						</div>
+						<div class="row mt-3">
+							<div class="col-6 img-preview">
+								<img data-tilt class="tilt-js" width="100%" src="css/img/hardspace/screenshot1.jpg">
+							</div>
+							<div class="col-6 img-preview">
+								<img data-tilt class="tilt-js" width="100%" src="css/img/hardspace/screenshot2.jpg">
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6 col-sm-12 d-block d-sm-block d-md-none description-container container-fluid text-left">
+						<div class="row">
+							<div class="col-12">
+								<h1 style="font-family: 'FreeSansBoldOblique';">HARDSPACE: SHIPBREAKER</h1>
+								<h5>STATUS: EARLY ACCESS RELEASE</h5>
+								<h5>BLACKBIRD INTERACTIVE</h5>
+								<h5>FOCUS HOME INTERACTIVE</h5>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-12 project-description" >
+								<br>
+								<p>
+									Equipped with cutting-edge salvaging tech, carve & slice spaceships to recover valuable materials. Upgrade your gear to take on more lucrative contracts and pay your billion credits debt to LYNX Corp!
+								</p>
+
+								<br>
+								<br>
+								<h5>FEATURES</h5>
+								<ul>
+									<li>Experience daily life as a cutter, working to pay off your debt</li>
+									<li>Cut and destroy within a next generation physics simulation</li>
+									<li>Upgrade tools and unlock new perks to take on harder contracts</li>
+								</ul>
+
+								<br>
+								<p> Worked on a variety of Gameplay, UI, Localization, Online tasks. </p>
+								<br>
+								<h5>BUILT WITH: Unity, C#, MySQL</h5>
+							</div>
+						</div>
+					</div>
+					</div>
+				</div>
+				<div class="bottom-bar my-5 mx-auto"></div>
 				<div id="project-ecocity" class="row mt-5 project-row">
 					<div class="col-md-6 col-sm-12 container-fluid">
 						<div class="row text-center">
