Added EFI and hypeman

--- a/projects-web.html
+++ b/projects-web.html
@@ -45,6 +45,46 @@
 	<div id="project-super-container" class="container-fluid">
 		<div class="row">
 			<div id="web-projects" class="col-12 container-fluid project-list">
+				<div id="project-canary" class="row mt-5 project-row">
+					<div class="col-md-6 col-sm-12 container-fluid">
+						<div class="row text-center">
+							<div class="col-12 text-center mx-auto">
+								<img width="100%" height="auto" src="css/img/hypeman/original.png">
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6 col-sm-12 description-container container-fluid text-left">
+						<div class="row">
+							<div class="col-12">
+								<h1 style="font-family: 'FreeSansBoldOblique';">HYPEMAN</h1>
+								<h5>STATUS: COMPLETE</h5>
+								<h5>TIMEFRAME: 16 HOURS</h5>
+								<h5>JAN 2020</h5>
+								<h5>NW HACKS 2020</h5>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-12 project-description" >
+								<br>
+								<h6>NW Hacks 2020 Winner: Domain.com Challenge</h6>
+								<br>
+								<p class="text-left">A social platform for motivation and energy. Post your daily qualms on a board full of positivity. Readers can 'up-hype' your post and send energy your way.</p>
+								<p>But what if you're not feeling like posting? What if that's too much work? There's a feature called HYPEBOOST that, when selected, notifies everyone in your network to GIVE YOU SOME HYPE by asking you to SCREAM into the microphone! The app comes with a leaderboard for those that give and receive the most "hype points", moderation for negative comments, and an extremely sleek, lightweight user interface!</p>
+								<a href="https://github.com/le-rich/Hypeman" class="visible-link">Github Link</a>
+								<br>
+								<br>
+								<h5>Teammates:</h5>
+								<ul>
+									<li>Vivian Wu</li>
+									<li>Andy Luu</li>
+								</ul>
+
+								<br>
+								<h5>BUILT WITH: HTML, CSS, Bootstrap, JavaScript, Firebase and Google Cloud</h5>
+							</div>
+						</div>
+					</div>
+				</div>
 				 <div id="project-vanidi" class="row mt-5 project-row">
             <div class="col-md-6 col-sm-12 d-md-block d-none description-container container-fluid text-left">
               <div class="row">
