--- a/projects-gd.html
+++ b/projects-gd.html
@@ -48,7 +48,7 @@
 	<div id="projects-background"></div>
 	<div id="project-cat-nav" class="container-fluid">
 		<div id="project-bar" style="font-family: FreeSansBold" class="row text-right">
-			<div id="curr-cat" class="ml-auto col-xl-3 col-lg-5 col-md-9 col-sm-12 dropdown">
+			<div id="curr-cat" class="col-xl-3 col-lg-5 col-md-9 col-sm-12 dropdown">
 				<span id="curr-project-label">GAME DEV</span>
 				<i class="fas fa-caret-down"></i>
   				<div class="dropdown-content ml-auto">
@@ -64,42 +64,11 @@
 	<div id="project-super-container" class="container-fluid">
 		<div class="row mx-3">
 			<div id="game-dev-projects" class="col-12 container-fluid project-list">
-				<div id="project-sunseeker" class="row project-row mt-5">
-					<div class="col-md-6 col-sm-12 d-md-block d-none description-container container-fluid text-left">
-						<div class="row">
-							<div class="col-12">
-								<h1 style="font-family: 'FreeSansBoldOblique';">HARDSPACE: SHIPBREAKER</h1>
-								<h5>STATUS: EARLY ACCESS RELEASE</h5>
-								<h5>BLACKBIRD INTERACTIVE</h5>
-								<h5>FOCUS HOME INTERACTIVE</h5>
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-12 project-description" >
-								<br>
-								<p>
-									Equipped with cutting-edge salvaging tech, carve & slice spaceships to recover valuable materials. Upgrade your gear to take on more lucrative contracts and pay your billion credits debt to LYNX Corp!
-								</p>
-
-								<br>
-								<h5>FEATURES</h5>
-								<ul>
-									<li>Experience daily life as a cutter, working to pay off your debt</li>
-									<li>Cut and destroy within a next generation physics simulation</li>
-									<li>Upgrade tools and unlock new perks to take on harder contracts</li>
-								</ul>
-
-								<br>
-								<p> Worked on a variety of Gameplay, UI, Localization, Online tasks. </p>
-								<br>
-								<h5>BUILT WITH: Unity, C#, MySQL</h5>
-							</div>
-						</div>
-					</div>
+				<div id="project-hardspace" class="row project-row mt-5">
 					<div class="col-md-6 col-sm-12 container-fluid">
 						<div class="row text-center">
 							<div class="col-12 text-center mx-auto">
-								<iframe src="https://www.youtube.com/embed/CzYLWspXgM0?autoplay=1&mute=1&controls=0" width="100%" height="500px" frameborder="0" allowfullscreen></iframe>
+								<iframe src="https://www.youtube.com/embed/CzYLWspXgM0?autoplay=1&mute=1&controls=0&loop=1&playlist=CzYLWspXgM0" width="100%" height="500px" frameborder="0" allowfullscreen></iframe>
 							</div>
 						</div>
 						<div class="row mt-3">
@@ -111,7 +80,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-6 col-sm-12 d-block d-sm-block d-md-none description-container container-fluid text-left">
+					<div class="col-md-6 col-sm-12 description-container container-fluid text-left">
 						<div class="row">
 							<div class="col-12">
 								<h1 style="font-family: 'FreeSansBoldOblique';">HARDSPACE: SHIPBREAKER</h1>
@@ -128,7 +97,6 @@
 								</p>
 
 								<br>
-								<br>
 								<h5>FEATURES</h5>
 								<ul>
 									<li>Experience daily life as a cutter, working to pay off your debt</li>
@@ -136,6 +104,11 @@
 									<li>Upgrade tools and unlock new perks to take on harder contracts</li>
 								</ul>
 
+								<div class="col-md-6 col-sm-12">
+									<a href="https://store.steampowered.com/app/1161580/Hardspace_Shipbreaker/">
+										<img width="100%" src="css/img/hardspace/steam.png">
+									</a>
+								</div>
 								<br>
 								<p> Worked on a variety of Gameplay, UI, Localization, Online tasks. </p>
 								<br>
@@ -143,6 +116,87 @@
 							</div>
 						</div>
 					</div>
+
+					</div>
+					<div class="bottom-bar my-5 mx-auto"></div>
+					<div id="project-EFI" class="row project-row mt-5">
+						<div class="col-md-6 col-sm-12 d-md-block d-none description-container container-fluid text-left">
+							<div class="row">
+								<div class="col-12">
+									<h1 style="font-family: 'FreeSansBoldOblique';">EFI</h1>
+									<h5>STATUS: COMPLETE</h5>
+									<h5>TIMEFRAME: 8 HOURS</h5>
+									<h5>BC GAME JAM 2020</h5>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-12 project-description" >
+									<br>
+									<p>
+										EFI was made to answer a simple question, what does the most souped up version of space invaders to ever exist look like?
+									</p>
+									<p>Now we know.</p>
+	
+									<br>
+									<h5>FEATURES</h5>
+									<ul>
+										<li>3 High Impact Weapons with ultimate ability activations</li>
+										<li>Ultra visceral gameplay</li>
+										<li>A killer soundtrack by Master Boot Record</li>
+										<li>High intensity visuals</li>
+									</ul>
+	
+									<br>
+									<h5>BUILT WITH: Unity, C#, Pure Adrenaline</h5>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-6 col-sm-12 container-fluid">
+							<div class="row text-center">
+								<div class="col-12 text-center mx-auto">
+									<iframe src="https://www.youtube.com/embed/8-u_9HRGGtc?autoplay=1&mute=1&controls=0&loop=1&playlist=8-u_9HRGGtc" width="100%" height="500px" frameborder="0" allowfullscreen></iframe>
+								</div>
+							</div>
+							<div class="row mt-3">
+								<div class="col-6 img-preview">
+									<img data-tilt class="tilt-js" width="100%" src="css/img/efi/efi1.jpg">
+								</div>
+								<div class="col-6 img-preview">
+									<img data-tilt class="tilt-js" width="100%" src="css/img/efi/efi2.jpg">
+								</div>
+							</div>
+						</div>
+						<div class="col-md-6 col-sm-12 d-block d-sm-block d-md-none description-container container-fluid text-left">
+							<div class="row">
+								<div class="col-12">
+									<h1 style="font-family: 'FreeSansBoldOblique';">EFI</h1>
+									<h5>STATUS: COMPLETE</h5>
+									<h5>TIMEFRAME: 8 HOURS</h5>
+									<h5>BC GAME JAM 2020</h5>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-12 project-description" >
+									<br>
+									<p>
+										EFI was made to answer a simple question, what does the most souped up version of space invaders to ever exist look like?
+									</p>
+									<p>Now we know.</p>
+	
+									<br>
+									<h5>FEATURES</h5>
+									<ul>
+										<li>3 High Impact Weapons with ultimate ability activations</li>
+										<li>Ultra visceral gameplay</li>
+										<li>A killer soundtrack by Master Boot Record</li>
+										<li>High intensity visuals</li>
+									</ul>
+	
+									<br>
+									<h5>BUILT WITH: Unity, C#, Pure Adrenaline</h5>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 				<div class="bottom-bar my-5 mx-auto"></div>
@@ -434,50 +488,6 @@
 
 								<br>
 								<h5>BUILT WITH: Unity, C#, Adobe Suite</h5>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="bottom-bar my-5 mx-auto"></div>
-				<div id="project-rickshaw" class="row mt-5 project-row">
-					<div class="col-md-6 col-sm-12 container-fluid">
-						<div class="row text-center">
-							<div class="col-12 text-center mx-auto">
-								<video width="100%" autoplay loop>
-									<source src="css/vid/rickshaw.mp4" type="video/mp4">
-								</video>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-6 col-sm-12 description-container container-fluid text-left">
-						<div class="row">
-							<div class="col-12">
-								<h1 style="font-family: 'FreeSansBoldOblique';">RICKSHAW RACING</h1>
-								<h5>STATUS: COMPLETE</h5>
-								<h5>TIMEFRAME: 1 MONTH</h5>
-								<h5>OCT 2017</h5>
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-12 project-description" >
-								<br>
-								<p class="text-left">A silly arcade racing game where you race a rickshaw around a track and shoot projectiles at your competitors. Made for the UBC Game Dev Club.</p>
-								<br>
-								<h5>FEATURES</h5>
-								<ul>
-									<li>Networked Multiplayer</li>
-									<li>Full playable race between two players online</li>
-								</ul>
-
-								<h5>Wonderful Contributors:</h5>
-								<ul>
-									<li>Jacob Brunette - Programmer</li>
-									<li>Darren Fu - Programmer</li>
-									<li>Juan Lee - Programmer</li>
-								</ul>
-
-								<br>
-								<h5>BUILT WITH: Unity, C#, Asset Forge</h5>
 							</div>
 						</div>
 					</div>
