--- a/projects-gd.html
+++ b/projects-gd.html
@@ -64,6 +64,85 @@
 	<div id="project-super-container" class="container-fluid">
 		<div class="row mx-3">
 			<div id="game-dev-projects" class="col-12 container-fluid project-list">
+				<div id="project-EFI" class="row project-row mt-5">
+					<div class="col-md-6 col-sm-12 d-md-block d-none description-container container-fluid text-left">
+						<div class="row">
+							<div class="col-12">
+								<h1 style="font-family: 'FreeSansBoldOblique';">ROGUE CARRIER</h1>
+								<h5>STATUS: COMPLETE</h5>
+								<h5>TIMEFRAME: 7 DAYS</h5>
+								<h5>KAJAM 2021</h5>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-12 project-description" >
+								<br>
+								<p>
+									Made for Repl.it's KAJAM 2021, Rogue Carrier is a fast-paced shoot em up with a surprising amount of planning involved to get to the last stage.
+									Can you make it to DEFCON 1 and defeat the final boss?
+								</p>
+								<br>
+								<h5>FEATURES</h5>
+								<ul>
+									<li>5 'DEFCON' Stages of gameplay</li>
+									<li>Ultra visceral gameplay</li>
+									<li>An edgy storyline and bossfights!</li>
+									<li>AIRSTRIKES</li>
+								</ul>
+
+								<br>
+								<h5>BUILT WITH: Unity, C#, Pure Adrenaline</h5>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6 col-sm-12 container-fluid">
+						<div class="row text-center">
+							<div class="col-12 text-center mx-auto">
+								<iframe src="https://www.youtube.com/embed/tqXLmACLoJM?autoplay=1&mute=1&controls=0&loop=1&playlist=tqXLmACLoJM" width="100%" height="500px" frameborder="0" allowfullscreen></iframe>
+							</div>
+						</div>
+						<div class="row mt-3">
+							<div class="col-6 img-preview">
+								<img data-tilt class="tilt-js" width="100%" src="css/img/rogue/r1.PNG">
+							</div>
+							<div class="col-6 img-preview">
+								<img data-tilt class="tilt-js" width="100%" src="css/img/rogue/r2.PNG">
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6 col-sm-12 d-block d-sm-block d-md-none description-container container-fluid text-left">
+						<div class="row">
+							<div class="col-12">
+								<h1 style="font-family: 'FreeSansBoldOblique';">ROGUE CARRIER</h1>
+								<h5>STATUS: COMPLETE</h5>
+								<h5>TIMEFRAME: 7 DAYS</h5>
+								<h5>KAJAM 2021</h5>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-12 project-description" >
+								<br>
+								<p>
+									Made for Repl.it's KAJAM 2021, Rogue Carrier is a fast-paced shoot em up with a surprising amount of planning involved to get to the last stage.
+									Can you make it to DEFCON 1 and defeat the final boss?
+								</p>
+
+								<br>
+								<h5>FEATURES</h5>
+								<ul>
+									<li>5 'DEFCON' Stages of gameplay</li>
+									<li>Ultra visceral gameplay</li>
+									<li>An edgy storyline and bossfights!</li>
+									<li>AIRSTRIKES</li>
+								</ul>
+
+								<br>
+								<h5>BUILT WITH: Unity, C#, Pure Adrenaline</h5>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="bottom-bar my-5 mx-auto"></div>
 				<div id="project-hardspace" class="row project-row mt-5">
 					<div class="col-md-6 col-sm-12 container-fluid">
 						<div class="row text-center">
